--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -5,9 +5,14 @@ BR2_arm926t=y
 # System
 BR2_SYSTEM_DHCP="eth0"
 
+#
+BR2_LINUX_KERNEL=n
+BR2_KERNEL_HEADERS_3_10=y
+
 # Filesystem
-#BR2_TARGET_ROOTFS_EXT2=y
+
 BR2_TARGET_ROOTFS_SQUASHFS=y
 
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_GLIBC=y
+BR2_PACKAGE_OPENSSH=n
