--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -10,9 +10,18 @@ BR2_LINUX_KERNEL=n
 BR2_KERNEL_HEADERS_3_10=y
 
 # Filesystem
-
 BR2_TARGET_ROOTFS_SQUASHFS=y
+#BR2_TARGET_ROOTFS_YAFFS2=y
+
+BR2_LOCALFILES="cp"
+BR2_SSH="ssh"
+BR2_SCP="scp"
+
+#BR2_SYSTEM_STANDALONE_TELNETD=y
+BR2_PACKAGE_BUSYBOX_STANDALONE_TELNETD=y
 
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_PACKAGE_ATFTP=y
 BR2_PACKAGE_GLIBC=y
-BR2_PACKAGE_OPENSSH=n
+BR2_PACKAGE_NGINX=y
+BR2_PACKAGE_OPENSSL=y
