try fix the break build
Change-Id: If30a43cc179006ae0c53a4c7d3792f1c34b62b80

--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -23,5 +23,8 @@ BR2_PACKAGE_BUSYBOX_STANDALONE_TELNETD=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_ATFTP=y
 BR2_PACKAGE_GLIBC=y
-BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_OPENSSL=y
+
+BR2_PACKAGE_NGINX=y
+BR2_PACKAGE_NGINX_HTTP=y
+BR2_PACKAGE_NGINX_UPLOAD=y
