feature:# 3481 support the OTA page
Change-Id: I3250a14cb160e9ddc90e81518a74c1f148822450

--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -28,3 +28,6 @@ BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NGINX_HTTP=y
 BR2_PACKAGE_NGINX_UPLOAD=y
+
+BR2_PACKAGE_PHP=y
+BR2_PACKAGE_PHP_EXT_JSON=y
