try let the app runnable
Change-Id: I3259e24d487be5378533d826b0a4d38e6a5fc750

--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -23,7 +23,6 @@ BR2_PACKAGE_BUSYBOX_STANDALONE_TELNETD=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_ATFTP=y
 BR2_PACKAGE_GLIBC=y
-BR2_PACKAGE_OPENSSL=y
 
 BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NGINX_HTTP=y
@@ -31,3 +30,12 @@ BR2_PACKAGE_NGINX_UPLOAD=y
 
 BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
+
+# IMPORTANT - below package can't be added
+# as ovrc strictly depends on older SSL related lib
+#BR2_PACKAGE_LIBCURL=y
+#BR2_PACKAGE_LIBWEBSOCKETS=y
+#BR2_PACKAGE_OPENSSL=y
+
+BR2_TARGET_GENERIC_HOSTNAME="spa25"
+BR2_TARGET_GENERIC_ISSUE="Welcome to Hansong Linux"
