add the alsa support
Change-Id: I7921a6dbe836cd02d29aee291228bdb139085232

--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -16,12 +16,10 @@ BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_LOCALFILES="cp"
 BR2_SSH="ssh"
 BR2_SCP="scp"
-
 #BR2_SYSTEM_STANDALONE_TELNETD=y
-BR2_PACKAGE_BUSYBOX_STANDALONE_TELNETD=y
-
+#BR2_PACKAGE_BUSYBOX_STANDALONE_TELNETD=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_PACKAGE_ATFTP=y
+#BR2_PACKAGE_ATFTP=y
 BR2_PACKAGE_GLIBC=y
 
 BR2_PACKAGE_NGINX=y
@@ -36,6 +34,12 @@ BR2_PACKAGE_PHP_EXT_JSON=y
 #BR2_PACKAGE_LIBCURL=y
 #BR2_PACKAGE_LIBWEBSOCKETS=y
 #BR2_PACKAGE_OPENSSL=y
+
+BR2_PACKAGE_OPENSSH=y
+
+# ALSA 
+BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_ALSA_LIB=y
 
 BR2_TARGET_GENERIC_HOSTNAME="spa25"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Hansong Linux"
