add the ntp support
Change-Id: I43154722810a9d5d643df48af4aaa8854bc2f726

--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -41,5 +41,8 @@ BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_LIB=y
 
+# NTP
+BR2_PACKAGE_NTP=y
+
 BR2_TARGET_GENERIC_HOSTNAME="spa25"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Hansong Linux"
