--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -26,8 +26,12 @@ BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NGINX_HTTP=y
 BR2_PACKAGE_NGINX_UPLOAD=y
 
-BR2_PACKAGE_PHP=y
-BR2_PACKAGE_PHP_EXT_JSON=y
+#BR2_PACKAGE_PHP=y
+#BR2_PACKAGE_PHP_EXT_JSON=y
+
+# Do not use above PHP any more...use FastCGI instead
+BR2_PACKAGE_LIBFCGI=y
+BR2_PACKAGE_SPAWN_FCGI=y
 
 # IMPORTANT - below package can't be added
 # as ovrc strictly depends on older SSL related lib
