--- a/buildrootconfig/spa25_defconfig
+++ b/buildrootconfig/spa25_defconfig
@@ -44,6 +44,7 @@ BR2_PACKAGE_OPENSSH=y
 # ALSA 
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_LIB=y
+BR2_PACKAGE_ALSA_UTILS_APLAY=y
 
 # NTP
 BR2_PACKAGE_NTP=y
