--- a/buildrootconfig/control4-8_defconfig
+++ b/buildrootconfig/control4-8_defconfig
@@ -49,5 +49,5 @@ BR2_PACKAGE_ALSA_UTILS_APLAY=y
 # NTP
 BR2_PACKAGE_NTP=y
 
-BR2_TARGET_GENERIC_HOSTNAME="ctrl16d"
+BR2_TARGET_GENERIC_HOSTNAME="control4-8"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Hansong Linux"
