feature:#17181 add php config
Change-Id: Icf447cc3b584d309a1fc056ff3c9d21f74d52161

--- a/buildrootconfig/control4-16_defconfig
+++ b/buildrootconfig/control4-16_defconfig
@@ -26,8 +26,8 @@ BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NGINX_HTTP=y
 BR2_PACKAGE_NGINX_UPLOAD=y
 
-#BR2_PACKAGE_PHP=y
-#BR2_PACKAGE_PHP_EXT_JSON=y
+BR2_PACKAGE_PHP=y
+BR2_PACKAGE_PHP_EXT_JSON=y
 
 # Do not use above PHP any more...use FastCGI instead
 BR2_PACKAGE_LIBFCGI=y
