--- a/buildrootconfig/control4-8_defconfig
+++ b/buildrootconfig/control4-8_defconfig
@@ -12,6 +12,7 @@ BR2_KERNEL_HEADERS_3_10=y
 # Filesystem
 BR2_TARGET_ROOTFS_SQUASHFS=y
 #BR2_TARGET_ROOTFS_YAFFS2=y
+BR2_TARGET_ROOTFS_JFFS2=y
 
 BR2_LOCALFILES="cp"
 BR2_SSH="ssh"
@@ -21,7 +22,7 @@ BR2_SCP="scp"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 #BR2_PACKAGE_ATFTP=y
 BR2_PACKAGE_GLIBC=y
-
+BR2_PACKAGE_MTD=y
 BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NGINX_HTTP=y
 BR2_PACKAGE_NGINX_UPLOAD=y
