--- a/buildrootconfig/ams16_defconfig
+++ b/buildrootconfig/ams16_defconfig
@@ -1,6 +1,6 @@
 BR2_arm=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_TARGET_GENERIC_HOSTNAME="control4-8"
+BR2_TARGET_GENERIC_HOSTNAME="ams16"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Hansong Linux"
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
